style.css
@font-face {
	font-family: 'Material Symbols Rounded';
	font-style: normal;
	src: url("libs/MaterialSymbolsRounded.woff2") format('woff2');
}

.material-symbols-rounded {
	font-family: 'Material Symbols Rounded';
	font-weight: normal;
	font-style: normal;
	font-size: 24px;
	line-height: 1;
	letter-spacing: normal;
	text-transform: none;
	display: inline-block;
	white-space: nowrap;
	word-wrap: normal;
	direction: ltr;
	-webkit-font-smoothing: antialiased;
}

body {
	margin: 0;
	height: 100vh;
	width: 100%;
	background-color: #181a1b;
	overflow: hidden;
	background-size: cover;
	background-position: center;
	color: var(--col-txt1);
	transition: .5s;
	user-select: none;
	background-repeat: no-repeat;
}

@supports (height: 100lvh) {
	body {
		height: 100lvh;
	}
}

#main {
	height: 100%;
	width: 100%;
	transition: .5s;
}

dialog {
	user-select: none;

	&> ::backdrop {
		background: transparent !important;
	}
}

#bgimage {
	object-fit: cover;
	object-position: center;
	transition: opacity var(----time1);
	z-index: -1;
	border: none;
	position: relative;

	&>.bgimage {
		opacity: 0;
		transition: opacity .5s;
		height: 100vh;
		width: 100%;
		object-position: center;
		object-fit: cover;
		position: absolute;
	}
}

#workspace {
	display: flex;
	flex-direction: column;
	height: 100%;
}

#maxappscontainer {
	flex: 1;
}

nav {
	background-color: transparent;
	color: var(--col-txt1);
	z-index: 99;
	display: grid;
	user-select: none;
	justify-content: center;
	align-items: center;
	height: fit-content;
	padding: var(--spacing-normal);
}

nav .flodiv {
	display: flex;
	justify-content: center;
	align-items: stretch;
	flex-direction: row;
	border-radius: var(--siz-radius1);
	background: transparent;
	padding: 1px;
	animation: pop .5s;
	gap: var(--spacing-normal);
}

nav [navobj] {
	padding: 3px;
	border-radius: var(--siz-radius1);
	background-color: var(--col-bg1);
	display: flex;
	justify-content: center;
	gap: 3px;
	align-items: center;
	flex-direction: row;
	transition: flex-basis var(----time1), width var(----time1), opacity var(----time1);
	width: fit-content;
	min-width: 1.8rem;
}

.navmalobj {
	margin: 5px 7px;
	text-align: center;
	font-size: 11px;
	display: flex;
	align-items: center;
	flex-direction: column;
}

#battery-display {
	transform: rotate(90deg) scale(0.8) translateX(-8px);
}

#battery-p-display {
	transform: translate(0px, 11px);
	display: block;
	height: 0px;
}

#date-display {
	display: block;
}

[navobj] [app-shortcut] {
	background-color: transparent;
	cursor: pointer;
	animation: appop 0.3s var(--time2);
	transition: var(--time1);
}

#ctrlic {
	fill: var(--col-txt1);
}

.window {
	min-width: 110px;
	position: absolute;
	min-height: 200px;
	background-color: transparent;
	border-radius: var(--siz-radius1);
	font-size: var(--font-size-normal);
	padding: 0px;
	overflow: visible;
	animation: appshow 0.5s 1;
	resize: none;
	display: flex;
	flex-direction: column;
	gap: 0;
	box-sizing: border-box;
	border: 1px solid var(--col-bg3);
	will-change: transform;
	box-shadow: 0px 0px .5em 1px #00000000;
	transition: box-shadow .5s;

	&:hover {
		box-shadow: 0px 5px 1em 1px #00000070;

	}
}

@media only screen and (max-width: 500px) {
	.window {
		min-width: 10px;
	}
}

@keyframes appshow {
	0% {
		transform: translateY(5px);
		opacity: 50%;
	}

	100% {
		transform: translateY(0px);
		opacity: 100%;
	}
}

.windowheader {
	background-color: var(--col-bg1);
	padding: var(--spacing-normal);
	cursor: grab;
	overflow-x: auto;
	display: flex;
	justify-content: space-between;
	margin-bottom: -1px;
	border-radius: var(--siz-radius1) var(--siz-radius1) 0 0;
}

.windowheader:active {
	cursor: grabbing;
}

.windowcontent {
	box-sizing: border-box;
	flex: 1;
	overflow: hidden;
	border-radius: 0 0 var(--siz-radius1) var(--siz-radius1);
	position: relative;
}

.windowloader {
	position: absolute;
	width: 100%;
	height: calc(100%);
	display: grid;
	transition: .5s;
	background: var(--col-bg1);
	backdrop-filter: blur(1rem);
	justify-content: center;
	align-content: center;
	color: #748c9b;
	font-size: var(--font-size-normal);
	align-items: center;
	justify-items: center;
}


.windowloader h2 {
	margin: 0;
}

.windowloader svg {
	height: 4rem;
	width: 4rem;
}

.windowcontent iframe {
	border: none;
	width: calc(100% + 1px);
	height: 100%;
}

.app-shortcut {
	background-color: transparent;
	border-radius: var(--siz-radius1);
	padding: 10px;
	cursor: pointer;
	width: 70px;
	animation: pop var(--time1);
	display: inline-block;
	border: 1px solid transparent;
	text-align: center;
	align-self: flex-start;
}

.app-shortcut.tooltip .tooltiptext {
	background-color: var(--col-bg2);
	border-radius: var(--siz-radius1);
	bottom: 9% !important;
	opacity: 1;
	word-break: normal;
	transform: scale(0.9) translateX(-4px);
}

.app-shortcut.tooltip:hover .tooltiptext {
	transition: var(----time1);
	transform: scale(1) translateX(-4px);
}

.app-shortcut span {
	overflow: hidden;
	padding: 0;
	display: flex;
	border-radius: 5px;
	justify-content: center;
}

.app-shortcut span svg {
	width: 29px;
	height: 29px;
	animation: pop var(--time2);
	overflow: hidden;
}

@keyframes appop {
	0% {
		opacity: 0;
		transform: translateY(.5em);
	}

	100% {
		opacity: 1;
	}
}

.app-shortcut:hover {
	background-color: #ffffff17;
}

.app-shortcut:active {
	cursor: grabbing;
}

.app-shortcut .app-icon {
	transition: 0.5s;
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	padding: 5px 0;
	font-family: inherit;
	font-size: 21px;
	background: linear-gradient(360deg, #b9b9b9, var(--col-txt1));
	color: #585858;
}

.app-shortcut .appname {
	margin-top: 0.5rem;
	color: var(--col-txt1);
	display: block;
	border-radius: var(--siz-radius1);
	font-size: var(--font-size-normal);
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
	text-align: center;
	padding: 0.1rem 0.5rem;
	background: var(--col-bg1)42;
	max-width: 67px;
	text-transform: capitalize;
}
/* ... */

